           (3)update Makefile: add new function "make help" and "make version", optimize code, rename phony target "mostlyclean" as "distclean"
           (4)adjust code style of function IAP_eraseByte and IAP_isSuccess
           (5)rename enumeration type RCC_CLK_divFactor as RCC_prescaler
           (6)rename UART_baudGenerator as UART_baudrateGenerator, rename member baudrateGenerator belong to structure UART_configTypeDef
           (7)update Makefile to v0.1.2

>Version : v0.0.2
 Alias   :
 Date    : 2019-03-22
 Note    : (1)fix bug of function RCC_BRT_setClockOutput
           (2)add bit operation function
           (3)update Makefile to v0.1.3: *support -j option; *add rebuild function
           (4)add bus speed configuration function, please refer to mem.h

>Version : v0.1.0
 Alias   :
 Date    : 2019-08-28
 Note    : (1)fix fatal bug of example file of IAP module
           (2)correct bit number define of GF2 in stc11.h
           (3)fix fatal bug of function GPIO_configMode
           (4)move file LICENSE to root path of project
           (5)delete abolish header file intrasm.h
           (6)update stc10.h
           (7)update Makefile to v0.2.5
           (8)add version.h for HML version information

>Version : v0.1.1
 Alias   :
 Date    : 2019-11-18
 Note    : (1)optimize code comment

>Version : v0.2.0
 Alias   :
 Date    : 2019-12-19
 Note    : (1)optimize header files location and update examples at then same time
           (2)fix mistakes in code comment
           (3)add note information with process macro format for conditional compile

>Version :
 Alias   : v0.2.1
 Date    :
 Note    : (1)update Makefile to v0.2.6
              update Makefile to v0.3.1
              - optimize Makefile structure and print format
              - support MCU, CLKFRE, CODE, XRAM, CONF, VERBOSE variable
           (2)refactor hml/version.h
           (3)optimize compile select
           (4)add function UART_getByte and UART_sendHex