@@ -62,3 +62,4 @@
            (2)refactor hml/version.h
            (3)optimize compile select
            (4)add function UART_getByte and UART_sendHex
+           (5)optimize function GPIO_config
